--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,24 +54,31 @@ h1, h2, h3, h4, h5, h6, p {
     }
 
 .menu-head {
-     font: 100 40px/1.5 'Pacifico', Helvetica, sans-serif;
-  color: black;
-  text-shadow: 4px 4px 4px rgba(1,1,1,0.1), 3px 3px 0px rgba(1,1,1,1.05);
-  background: none;
+  font: 100 40px/1.5 'Pacifico', Helvetica, sans-serif;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 3px 0 black, 0 -1px black;
+  background: sandybrown;
   border-style: solid;
     border-top:  black;
   text-align: center;
 }
 
 .card-title {
-     font: 100 25px/1.5 'Pacifico', Helvetica, sans-serif;
-  color: black;
-  text-shadow: 1px 1px 1px rgba(1,1,1,0.1), 2px 2px 0px rgba(1,1,1,1.05);
+   font: 100 25px/1.5 'Pacifico', Helvetica, sans-serif;
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 
 }
 
 .card-text {
     font: 100 20px/1.5 Times New Roman;
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
+}
+
+.card-footer {
+  color: white;
 }
 
 form {
@@ -91,9 +98,9 @@ form {
 
 .menu-title {
     font: 100 60px/1.5 'Pacifico', Helvetica, sans-serif;
-    color: black;
-    text-shadow: 4px 4px 4px rgba(1,1,1,0.1), 3px 3px 0px rgba(1,1,1,1.05);
-    background: none;
+    color: white;
+    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+    background: sandybrown;
     border-style: solid;
     border-top:  black;
     text-align: center;
@@ -116,4 +123,11 @@ float: right;
 
 .col-md-6 {
   padding-bottom: 15px;
+}
+
+
+.column {
+  float: left;
+  width: 50%;
+  padding-right: 4px; 
 }
