--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -32,6 +32,7 @@
         <div class="card block">
           <h4 class="card-title"><%= tapa.title %></h4>
           <p class="card-text"><%= tapa.description %></p>
+          <p class="card-text">$<%= tapa.price %></p>
         </div>
       </div>
     </div>
@@ -50,6 +51,7 @@
         <div class="card block">
           <h4 class="card-title"><%= soup.title %></h4>
           <p class="card-text"><%= soup.description %></p>
+          <p class="card-text">$<%= soup.price %></p>
         </div>
       </div>
     </div>
@@ -69,6 +71,7 @@
         <div class="card block">
           <h4 class="card-title"><%= dip.title %></h4>
           <p class="card-text"><%= dip.description %></p>
+          <p class="card-text">$<%= dip.price %></p>
         </div>
       </div>
     </div>
@@ -87,6 +90,7 @@
         <div class="card block">
           <h4 class="card-title"><%= nacho.title %></h4>
           <p class="card-text"><%= nacho.description %></p>
+          <p class="card-text">$<%= nacho.price %></p>
         </div>
       </div>
     </div>
@@ -105,6 +109,7 @@
         <div class="card block">
           <h4 class="card-title"><%= salad.title %></h4>
           <p class="card-text"><%= salad.description %></p>
+          <p class="card-text">$<%= salad.price %></p>
         </div>
       </div>
     </div>
@@ -123,6 +128,7 @@
         <div class="card block">
           <h4 class="card-title"><%= steak.title %></h4>
           <p class="card-text"><%= steak.description %></p>
+          <p class="card-text">$<%= steak.price %></p>
         </div>
       </div>
     </div>
@@ -141,6 +147,7 @@
         <div class="card block">
           <h4 class="card-title"><%= chicken.title %></h4>
           <p class="card-text"><%= chicken.description %></p>
+          <p class="card-text">$<%= chicken.price %></p>
         </div>
       </div>
     </div>
@@ -159,6 +166,7 @@
         <div class="card block">
           <h4 class="card-title"><%= pork.title %></h4>
           <p class="card-text"><%= pork.description %></p>
+           <p class="card-text">$<%= pork.price %></p>
         </div>
       </div>
     </div>
@@ -177,6 +185,7 @@
         <div class="card block">
           <h4 class="card-title"><%= seafood.title %></h4>
           <p class="card-text"><%= seafood.description %></p>
+          <p class="card-text">$<%= seafood.price %></p>
         </div>
       </div>
     </div>
@@ -195,6 +204,7 @@
         <div class="card block">
           <h4 class="card-title"><%= side.title %></h4>
           <p class="card-text"><%= side.description %></p>
+          <p class="card-text">$<%= side.price %></p>
         </div>
       </div>
     </div>
@@ -215,6 +225,7 @@
         <div class="card block">
           <h4 class="card-title"><%= fajita.title %></h4>
           <p class="card-text"><%= fajita.description %></p>
+          <p class="card-text">$<%= fajita.price %></p>
         </div>
       </div>
     </div>
@@ -233,6 +244,7 @@
         <div class="card block">
           <h4 class="card-title"><%= chimichanga.title %></h4>
           <p class="card-text"><%= chimichanga.description %></p>
+           <p class="card-text">$<%= chimichanga.price %></p>
         </div>
       </div>
     </div>
@@ -251,6 +263,7 @@
         <div class="card block">
           <h4 class="card-title"><%= taco.title %></h4>
           <p class="card-text"><%= taco.description %></p>
+          <p class="card-text">$<%= taco.price %></p>
         </div>
       </div>
     </div>
@@ -269,6 +282,7 @@
         <div class="card block">
           <h4 class="card-title"><%= quesadilla.title %></h4>
           <p class="card-text"><%= quesadilla.description %></p>
+           <p class="card-text">$<%= quesadilla.price %></p>
         </div>
       </div>
     </div>
@@ -287,6 +301,7 @@
         <div class="card block">
           <h4 class="card-title"><%= enchilada.title %></h4>
           <p class="card-text"><%= enchilada.description %></p>
+          <p class="card-text">$<%= enchilada.price %></p>
         </div>
       </div>
     </div>
@@ -306,7 +321,7 @@
           <h4 class="card-title"><%= drink
           .title %></h4>
           <p class="card-text"><%= drink.description %></p>
-          <p class="card-footer"> $<%= drink.price %></p>
+          <p class="card-footer">$<%= drink.price %></p>
         </div>
       </div>
     </div>
