vertically centered logo on apply page.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,9 +91,11 @@ form {
 }
 
 #logo {
-    float: right;
     padding-top: 200px;
     padding-right: 100px;
+    vertical-align: middle;
+    float: right;
+
 }
 
 .menu-title {
