--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,11 +91,9 @@ form {
 }
 
 #logo {
-    padding-top: 200px;
-    padding-right: 100px;
-    vertical-align: middle;
+    margin-top: 50%;
+    padding-right: 125px;
     float: right;
-
 }
 
 .menu-title {
