--- a/app/views/menu_items/_form.html.erb
+++ b/app/views/menu_items/_form.html.erb
@@ -5,7 +5,7 @@
   <%= f.input :title %>
   <%= f.input :description %>
   <%= f.input :price %>
-  <%= f.input :type, :collection => ['Appetizer', 'BrunchSide', 'Chicken','Chimichanga', 'Dessert', 'Dip', 'Drink', 'Egg', 'Enchilada', 'Fajita', 'Griddle', 'Lunch', 'Nacho', 'Omelette', 'Pork', 'Quesadilla', 'Salad', 'Seafood', 'Side', 'Skillet', 'Soup', 'Steak', 'Taco', 'Tapa']  %>
+  <%= f.input :type, :collection => ['Appetizer', 'BottleD', 'BottleI', 'Bourbon', 'BrunchSide', 'Chicken','Chimichanga', 'Dessert', 'Dip', 'DraftD', 'DraftI', 'Drink', 'Egg', 'Enchilada', 'Fajita', 'Gin', 'Griddle', 'Liqueur', 'Lunch', 'Margarita', 'Nacho', 'Omelette', 'Pork', 'Quesadilla', 'Rum', 'Salad', 'SangriaR', 'SangriaW', 'Scotch', 'Seafood', 'Side', 'Skillet', 'Soup', 'Steak', 'Taco', 'Tapa', 'TequilaA', 'TequilaF', 'TequilaM', 'TequilaP', 'TequilaR', 'TequilaU', 'TequilaW', 'Vodka', 'WineR', 'WineW']  %>
   <%= f.input :label %>
   <%= f.button :submit %>
 <% end %>
