--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -4,22 +4,17 @@
 
 <h2 class="menu-head">Antojiotos (Appetizers)</h2>
 
-<div class="container">
-<div class="row">
   <% @appetizers.each do |appetizer| %>
-
-    <div class="col-sm-6 col-lg-4">
-      <div class="card text-center">
-        <div class="card block">
-          <h4 class="card-title"><%= appetizer.title %></h4>
-          <p class="card-text"><%= appetizer.description %></p>
-          <p class="card-footer"> $<%= appetizer.price %></p>
-        </div>
-      </div>
-    </div>
+  <table class="menu">
+    <tr>
+      <th><p class="card-title"><%= appetizer.title %></p></th>
+      <th><p class="card-text">$<%= appetizer.price %></p></th>
+    </tr>
+    <tr>
+      <th><p class="card-text"><%= appetizer.description %></p></th>
+    </tr>
+  </table>
   <% end %>
-</div>
-</div>
 
 <h2 class="menu-head">Tapas</h2>
 
