--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -11,7 +11,7 @@
       <th><p class="card-text">$<%= appetizer.price %></p></th>
     </tr>
     <tr>
-      <th><p class="card-text"><%= appetizer.description %></p></th>
+      <th ><p class="price"><%= appetizer.description %></p></th>
     </tr>
   </table>
   <% end %>
