switched class names for css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -145,4 +145,10 @@ float: right;
 .price {
   color: white;
   padding-right: 25px;
+  text-align: right;
+}
+
+.description {
+  color: white;
+  padding-left: 25px;
 }
