--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -8,10 +8,10 @@
   <table class="menu">
     <tr>
       <th><p class="card-title"><%= appetizer.title %></p></th>
-      <th><p class="card-text">$<%= appetizer.price %></p></th>
+      <th><p class="price">$<%= appetizer.price %></p></th>
     </tr>
     <tr>
-      <th ><p class="price"><%= appetizer.description %></p></th>
+      <th ><p class="description"><%= appetizer.description %></p></th>
     </tr>
   </table>
   <% end %>
