--- a/app/views/main/lunch.html.erb
+++ b/app/views/main/lunch.html.erb
@@ -1,22 +1,17 @@
 <h1 class="menu-title">Lunch Specials</h1>
-<h2> Served Mondy - Friday 11AM - 3PM</h2>
+<h2 class="menu-head"> Served Mondy - Friday 11AM - 3PM</h2>
 
-<div class="container">
-<div class="row">
   <% @lunches.each do |lunch| %>
-
-    <div class="col-sm-6 col-lg-4">
-      <div class="card text-center">
-        <div class="card block">
-          <h4 class="card-title"><%= lunch.title %></h4>
-          <p class="card-text"><%= lunch.description %></p>
-          <p class="card-footer"> $<%= lunch.price %></p>
-        </div>
-      </div>
-    </div>
-    <% end %>
-</div>
-</div>
+  <table class="menu">
+    <tr>
+      <th><p class="card-title"><%= lunch.title %></p></th>
+      <th><p class="price">$<%= lunch.price %></p></th>
+    </tr>
+    <tr>
+      <th ><p class="description"><%= lunch.description %></p></th>
+    </tr>
+  </table>
+  <% end %>
 
 <h2 class="menu-head"> Bebidas (Drinks)</h2>
 
@@ -24,16 +19,14 @@
 	<div class="row">
   <% @drinks.each do |drink| %>
 
-    <div class="col-sm-6 col-lg-4">
-      <div class="card text-center">
-        <div class="card block">
-          <h4 class="card-title"><%= drink
-          .title %></h4>
-          <p class="card-text"><%= drink.description %></p>
-          <p class="card-footer"> $<%= drink.price %></p>
-        </div>
-      </div>
-    </div>
+  <% @drinks.each do |drink| %>
+  <table class="menu">
+    <tr>
+      <th><p class="card-title"><%= drink.title %></p></th>
+      <th><p class="price">$<%= drink.price %></p></th>
+    </tr>
+    <tr>
+      <th ><p class="description"><%= drink.description %></p></th>
+    </tr>
+  </table>
   <% end %>
-</div>
-</div>
