--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,12 +55,14 @@ h1, h2, h3, h4, h5, h6, p {
 
 .menu-head {
   font: 100 40px/1.5 'Pacifico', Helvetica, sans-serif;
-  color: white;
+  color: orangered;
   text-shadow: -1px 0 black, 0 1px black, 3px 0 black, 0 -1px black;
   background: sandybrown;
   border-style: solid;
     border-top:  black;
+    border-color: white;
   text-align: center;
+  padding-bottom: 15px;
 }
 
 .card-title {
@@ -99,11 +101,12 @@ form {
 
 .menu-title {
     font: 100 60px/1.5 'Pacifico', Helvetica, sans-serif;
-    color: white;
+    color: orangered;
     text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
-    background: sandybrown;
+    background: none;
     border-style: solid;
     border-top:  black;
+    border-color: white;
     text-align: center;
 }
 
