--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -37,7 +37,7 @@
   <table class="menu">
     <tr>
       <th><p class="card-title"><%= soup.title %></p></th>
-      <th><p class="price">$<%= soup.price %></p></th>
+      <th><p class="price"><%= soup.price %></p></th>
     </tr>
     <tr>
       <th ><p class="description"><%= soup.description %></p></th>
