--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -1,10 +1,13 @@
 <% content_for :head do %>
   <meta name="turbolinks-cache-control" content="no-cache">
 <% end %>
+ <div class="container">
+   <%= image_tag 'mayan-logo.png', height: 450, width: 850 %>
+</div>
+
   <h1 class="menu-title"> Welcome to Mayan Kitchen!</h1>
 
 <div class="logo">
-  <%= image_tag 'mayan-logo.jpg' %>
 </div>
 
 
