--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,6 +62,7 @@ h1, h2, h3, h4, h5, h6, p {
     border-top:  black;
     border-color: white;
   text-align: center;
+  padding-top: 15px;
   padding-bottom: 15px;
 }
 
@@ -154,4 +155,12 @@ float: right;
 .description {
   color: white;
   padding-left: 25px;
+}
+
+.michelada {
+  color: white;
+  background: sandybrown;
+  text-align: center;
+  font: 100 30px/1.5 'Pacifico', Helvetica, sans-serif;
+
 }
