removed prices from tequila menu

--- a/app/views/main/tequila.html.erb
+++ b/app/views/main/tequila.html.erb
@@ -117,7 +117,7 @@
       <div class="card text-center">
         <div class="card block">
           <h4 class="card-title"><%= sangria_w.title %></h4>
-          <p class="card-footer"><%= wine_w.price %></p>
+          <p class="card-footer"><%= sangria_w.price %></p>
         </div>
       </div>
     </div>
@@ -171,7 +171,6 @@
       <div class="card text-center">
         <div class="card block">
           <h4 class="card-title"><%= tequila_w.title %></h4>
-          <p class="card-footer"> $<%= tequila_w.price %></p>
         </div>
       </div>
     </div>
@@ -190,7 +189,6 @@
       <div class="card text-center">
         <div class="card block">
           <h4 class="card-title"><%= tequila_r.title %></h4>
-          <p class="card-footer"> $<%= tequila_r.price %></p>
         </div>
       </div>
     </div>
@@ -209,7 +207,6 @@
       <div class="card text-center">
         <div class="card block">
           <h4 class="card-title"><%= tequila_a.title %></h4>
-          <p class="card-footer"> $<%= tequila_a.price %></p>
         </div>
       </div>
     </div>
@@ -228,7 +225,6 @@
       <div class="card text-center">
         <div class="card block">
           <h4 class="card-title"><%= tequila_m.title %></h4>
-          <p class="card-footer"> $<%= tequila_m.price %></p>
         </div>
       </div>
     </div>
@@ -247,7 +243,6 @@
       <div class="card text-center">
         <div class="card block">
           <h4 class="card-title"><%= tequila_p.title %></h4>
-          <p class="card-footer"> $<%= tequila_p.price %></p>
         </div>
       </div>
     </div>
@@ -266,7 +261,6 @@
       <div class="card text-center">
         <div class="card block">
           <h4 class="card-title"><%= tequila_u.title %></h4>
-          <p class="card-footer"> $<%= tequila_u.price %></p>
         </div>
       </div>
     </div>
