added row classes to tables

--- a/app/views/main/tequila.html.erb
+++ b/app/views/main/tequila.html.erb
@@ -1,5 +1,6 @@
 <h1 class="menu-title"> Beer</h1>
 
+<div class="row">
   <div class="column">
 <h2 class= "menu-head">Draft Domestic </br> 18 oz $4.00</h2>
 
@@ -24,7 +25,9 @@
   </table>
   <% end %>
 </div>
+</div>
 
+<div class="row">
   <div class="column">
 <h2 class= "menu-head">Bottle Domestic </br> $4.50</h2>
 
@@ -48,6 +51,7 @@
   </table>
   <% end %>
 </div>
+</div>
 
 <h1 class= "menu-head"> MICHELADA</h1>
 
@@ -55,6 +59,7 @@
 
 <h2 class="menu-title"> Wine</h2>
 
+<div class="row">
   <div class="column">
 <h2 class= "menu-head">White</h2>
 
@@ -94,9 +99,11 @@
   </table>
   <% end %>
 </div>
+</div>
 
 <h2 class="menu-title"> Sangria</h2>
 
+<div class="row">
   <div class="column">
 <h2 class= "menu-head">White</h2>
 
@@ -128,6 +135,7 @@
       </div>
     </div>
   <% end %>
+</div>
 </div>
 </div>
 
